@@ -14,74 +14,106 @@ import java.util.List;
 @Configuration
 public class CorsConfig implements WebMvcConfigurer {
 
-    @Override
-    public void addCorsMappings(CorsRegistry registry) {
-        registry.addMapping("/**")
-                .allowedOrigins(
-                        "http://127.0.0.1:5501",
-                        "http://localhost:5501",
-                        "http://127.0.0.1:5500",
-                        "http://localhost:5500",
-                        "http://127.0.0.1:8080",
-                        "http://localhost:8080",
-                        "http://localhost:3000",
-                        "http://127.0.0.1:3000",
-                        "http://localhost:9999",
-                        "http://127.0.0.1:9999"
-                )
-                .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")
-                .allowedHeaders("*")
-                .allowCredentials(true)
-                .maxAge(3600);
-    }
+//    @Override
+//    public void addCorsMappings(CorsRegistry registry) {
+//        registry.addMapping("/**")
+//                .allowedOrigins(
+//                        "http://127.0.0.1:5501",
+//                        "http://localhost:5501",
+//                        "http://127.0.0.1:5500",
+//                        "http://localhost:5500",
+//                        "http://127.0.0.1:8080",
+//                        "http://localhost:8080",
+//                        "http://localhost:3000",
+//                        "http://127.0.0.1:3000",
+//                        "http://localhost:9999",
+//                        "http://127.0.0.1:9999"
+//                )
+//                .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")
+//                .allowedHeaders("*")
+//                .allowCredentials(true)
+//                .maxAge(3600);
+//    }
+//
+//    @Bean
+//    public CorsConfigurationSource corsConfigurationSource() {
+//        CorsConfiguration configuration = new CorsConfiguration();
+//
+//        // Frontend origin-ləri
+//        configuration.setAllowedOrigins(Arrays.asList(
+//                "http://127.0.0.1:5501",
+//                "http://localhost:5501",
+//                "http://127.0.0.1:5500",
+//                "http://localhost:5500",
+//                "http://127.0.0.1:8080",
+//                "http://localhost:8080",
+//                "http://localhost:3000",
+//                "http://127.0.0.1:3000",
+//                "http://localhost:9999",
+//                "http://127.0.0.1:9999"
+//        ));
+//
+//        // İcazə verilən HTTP metodları
+//        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+//
+//        // İcazə verilən header-lar
+//        configuration.setAllowedHeaders(Arrays.asList(
+//                "Authorization",
+//                "Content-Type",
+//                "X-Requested-With",
+//                "Accept",
+//                "Origin",
+//                "Access-Control-Request-Method",
+//                "Access-Control-Request-Headers"
+//        ));
+//
+//        // Expose ediləcək header-lar
+//        configuration.setExposedHeaders(Arrays.asList(
+//                "Access-Control-Allow-Origin",
+//                "Access-Control-Allow-Credentials",
+//                "Authorization"
+//        ));
+//
+//        // Cookie və authentication header-ları üçün
+//        configuration.setAllowCredentials(true);
+//
+//        // Preflight cache müddəti
+//        configuration.setMaxAge(3600L);
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
+
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Frontend origin-ləri
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://127.0.0.1:5501",
-                "http://localhost:5501",
-                "http://127.0.0.1:5500",
-                "http://localhost:5500",
-                "http://127.0.0.1:8080",
-                "http://localhost:8080",
-                "http://localhost:3000",
-                "http://127.0.0.1:3000",
-                "http://localhost:9999",
-                "http://127.0.0.1:9999"
+        // allowedOrigins əvəzinə allowedOriginPatterns işlətmək port fərqliliklərində (3000, 5500 və s.) xətanın qarşısını alır
+        configuration.setAllowedOriginPatterns(List.of(
+                "http://localhost:[*]",
+                "http://127.0.0.1:[*]"
         ));
 
-        // İcazə verilən HTTP metodları
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        // Bütün HTTP metodlarına icazə
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 
-        // İcazə verilən header-lar
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
-        ));
+        // Preflight və standart header-lər
+        configuration.setAllowedHeaders(List.of("*"));
 
-        // Expose ediləcək header-lar
-        configuration.setExposedHeaders(Arrays.asList(
-                "Access-Control-Allow-Origin",
-                "Access-Control-Allow-Credentials",
-                "Authorization"
-        ));
+        // Frontend-in oxuya biləcəyi header-lər
+        configuration.setExposedHeaders(List.of("Authorization", "Content-Type", "Access-Control-Allow-Origin"));
 
-        // Cookie və authentication header-ları üçün
+        // Cookie / Auth Header dəstəyi
         configuration.setAllowCredentials(true);
 
-        // Preflight cache müddəti
+        // Preflight cavabının cache müddəti (saniyə)
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
 }
